more tests refactored